--- a/themes/templatemoster/html/weeducate/index.html
+++ b/themes/templatemoster/html/weeducate/index.html
@@ -127,10 +127,10 @@
       <li class="menu-item">
         <a href="#" class="has-chevron active" data-toggle="collapse" data-target="#dashboard" aria-expanded="false"
           aria-controls="dashboard">
-          <span><i class="material-icons fs-16">dashboard</i>Dashboard </span>
+          <span><i class="material-icons fs-16">dashboard</i>메인 </span>
         </a>
         <ul id="dashboard" class="collapse show" aria-labelledby="dashboard" data-parent="#side-nav-accordion">
-          <li> <a href="index.html" class="active">Weeducate</a> </li>
+          <li> <a href="index.html" class="active">학생</a> </li>
 
         </ul>
       </li>
@@ -140,12 +140,12 @@
       <li class="menu-item">
         <a href="#" class="has-chevron" data-toggle="collapse" data-target="#professor" aria-expanded="false"
           aria-controls="dashboard">
-          <span><i class="fa fa-user fs-16"></i>Professors</span>
+          <span><i class="fa fa-user fs-16"></i>알림장</span>
         </a>
         <ul id="professor" class="collapse" aria-labelledby="dashboard" data-parent="#side-nav-accordion">
-          <li> <a href="pages/professors/allprofessor.html">All Professors</a> </li>
-          <li> <a href="pages/professors/addprofessor.html">Add Professors</a> </li>
-          <li> <a href="pages/professors/aboutprofessor.html">About Professors</a> </li>
+          <li> <a href="pages/note/notes.html">알림장 목록</a> </li>
+          <li> <a href="pages/professors/addprofessor.html">예약발송함</a> </li>
+          <!-- <li> <a href="pages/professors/aboutprofessor.html">About Professors</a> </li> -->
         </ul>
       </li>
       <!-- /Proessors End--->
